--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "karma-browserstack-launcher",
-  "version": "0.1.3",
+  "name": "karma-browserstack-launcher-nt",
+  "version": "0.1.4-nt",
   "description": "A Karma plugin. Launch any browser on BrowserStack!",
   "main": "index.js",
   "scripts": {
